<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tabsdemo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="main_news">消息</string>
    <string name="main_kebiao">课表</string>
    <string name="more">更多</string>
    <string name="main_me">我</string>
	<string name="main_chuqin">出勤</string>
	
	<string name="chuqin_rili">日历</string>
	<string name="chuqin_chidao">迟到</string>
	<string name="chuqin_zaotui">早退</string>
	<string name="chuqin_kuangke">旷课</string>
	<string name="chuqin_qingjia">请假</string>
	
	<string name="more_beiwang">备忘录</string>
	<string name="more_others">其他</string>

		<string name="cancle">取消</string>
    <string name="finish">完成</string>
    <string name="menu_settings">设置</string>
    <string name="set">设置</string>
    <string name="message_set">消息设置</string>
    <string name="quiet">开启上课自动静音</string>  
    <string name="remind">开启课前振动提醒</string>
    <string name="about_app">软件相关</string> 
    <string name="revision">版本支持</string>  
    <string name="us">关于作者</string>                   
    <string name="heading">课表信息</string>  
    <string name="exit">退出</string> 
    <string name="back">返回</string>     
    <string name="edit_title">课程信息</string> 
    <string name="course_name">课程名称：</string>
    <string name="course_address">教室地点：</string>
    <string name="course_teacher">老师姓名：</string>  
    <string name="course_amount">上课节数：</string> 
    <string name="course_week">上课周数：</string> 
    <string name="course_time">上课时间：</string> 
    <string name="input_course_name">请输入课程名称</string>
    <string name="input_course_address">请输入教室地点</string>
    <string name="input_course_teacher">请输入老师姓名</string>  
    <string name="input_course_week">总周数或单双周</string> 
    <string name="input_course_jieshu">总节数不超过4</string>    
    <string name="to">至</string>     
    <string name="jieshulimit">1 2 3 4</string>    
    
     <string name="chuqin_chidao_title">出勤迟到记录</string>
      <string name="chuqin_zaotui_title">出勤早退记录</string>
       <string name="chuqin_kuangke_title">出勤旷课记录</string>
        <string name="chuqin_qingjia_title">出勤请假记录</string>
     
    <string name="export_chidao">导出迟到名单</string>
    <string name="import_chidao">导入迟到名单</string>
   
    <string name="export_zaotui">导出早退名单</string>
    <string name="import_zaotui">导入早退名单</string>
    <string name="export_kuangke">导出旷课名单</string>
    <string name="import_kuangke">导入旷课名单</string>
    <string name="export_qingjia">导出请假名单</string>
    <string name="import_qingjia">导入请假名单</string>
    
    
    
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_add_friend">AddFriendActivity</string>
    <string name="title_activity_roster_list">RosterListActivity</string>
    <string name="title_activity_history">HistoryActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_group_chat">GroupChatActivity</string>
    <string name="title_activity_profile_change">ProfileChangeActivity</string>
    <string name="title_activity_profile_friend">ProfileFriendActivity</string>
    
    
     <string name="listView">ListView</string>
    <string name="back1">&lt;</string>
    <string name="timeSet">time set</string>
    <string name="dateText">datetime</string>
    <string name="search_hint">搜索记录</string>
    <string name="search_label">搜索</string>
    <string name="alertName">事件提醒</string>
    <string name="positiveButton">查看</string>
    <string name="negativeButton">忽略</string>
    
    <string name="title">学生成绩管理系统</string>
    <string name="menu_about">关于本程序</string>
    <string name="title_activity_sqlite_demo">SQliteDemo</string>
    <string name="str_id">学号：</string>
    <string name="query_edit_hint">请输入学生学号</string>
    <string name="str_query_button">查询</string>
    <string name="query_str">查询</string>
    <string name="insert_str">添加</string>
    <string name="update_str">修改</string>
    <string name="delete_str">删除</string>
    <string name="text1">ID</string>
    <string name="text2">姓名</string>
    <string name="text3">学号</string>
    <string name="text4">成绩</string>
    <string name="insert_text1">姓名:</string>
    <string name="insert_text2">学号:</string>
    <string name="insert_text3">成绩:</string>
    <string name="insert_editName_hint">请输入学生姓名</string>
    <string name="insert_editNumber_hint">请输入学生学号</string>
    <string name="insert_editScore_hint">请输入学生成绩</string>
    <string name="noinfo">没有该学生的信息</string>
    <string name="haveNumber">已经存在该学号,请重新输入！</string>
    <string name="dialog_title">温馨提示</string>
    <string name="ok">确定</string>
    <string name="app_exit">你确定退出吗？</string>
    <string name="dialog_msg">谢谢使用</string>
</resources>
