<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f0f0f0"
    android:orientation="vertical"
    android:layout_marginTop="35dp" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/chuqin_chidao_title"
        android:textColor="#333333"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#d0d0d0" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="#FFFFFF" >

        <TextView
            android:id="@+id/chidao_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:layout_marginLeft="20dp"
            android:text="姓名"
            android:textColor="#333333"
            android:textSize="@dimen/title_size" />

        <EditText
            android:id="@+id/chidao_name_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="15dp"
            android:layout_toRightOf="@id/chidao_name"
            android:background="@null"
            android:hint="请迟到学生姓名"
            android:inputType="text"
            android:maxLength="10"
            android:textColor="#9f9f9f"
            android:textSize="@dimen/value_size" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="10dp"
        android:background="#d0d0d0" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="#FFFFFF" >

        <TextView
            android:id="@+id/chidao_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:layout_marginLeft="20dp"
            android:text="学号"
            android:textColor="#333333"
            android:textSize="@dimen/title_size" />

        <EditText
            android:id="@+id/chidao_number_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="15dp"
            android:layout_toRightOf="@id/chidao_number"
            android:background="@null"
            android:hint="请填写迟到学生学号"
            android:inputType="numberDecimal"
            android:maxLength="15"
            android:textColor="#9f9f9f"
            android:textSize="@dimen/value_size" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="10dp"
        android:background="#d0d0d0" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="#FFFFFF" >

        <TextView
            android:id="@+id/chidao_xibie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:layout_marginLeft="20dp"
            android:text="系别"
            android:textColor="#333333"
            android:textSize="@dimen/title_size" />

        <EditText
            android:id="@+id/chidao_xibie_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="15dp"
            android:layout_toRightOf="@id/chidao_xibie"
            android:background="@null"
            android:hint="请填写学生所在系别"
            android:inputType="text"
            android:maxLength="20"
            android:textColor="#9f9f9f"
            android:textSize="@dimen/value_size" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="10dp"
        android:background="#d0d0d0" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="#FFFFFF" >

        <TextView
            android:id="@+id/chidao_banji"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:layout_marginLeft="20dp"
            android:text="班级"
            android:textColor="#333333"
            android:textSize="@dimen/title_size" />

        <EditText
            android:id="@+id/chidao_banji_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="15dp"
            android:layout_toRightOf="@id/chidao_banji"
            android:background="@null"
            android:hint="请填写学生所在班级"
            android:inputType="text"
            android:maxLength="20"
            android:textColor="#9f9f9f"
            android:textSize="@dimen/value_size" />
    </RelativeLayout>

     <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="10dp"
        android:background="#d0d0d0" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="#FFFFFF" >

        <TextView
            android:id="@+id/chidao_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:layout_marginLeft="20dp"
            android:text="迟到时间"
            android:textColor="#333333"
            android:textSize="@dimen/title_size" />

        <EditText
            android:id="@+id/chidao_time_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="15dp"
            android:layout_toRightOf="@id/chidao_time"
            android:background="@null"
            android:hint="请填写学生迟到时长"
            android:inputType="text"
            android:maxLength="20"
            android:textColor="#9f9f9f"
            android:textSize="@dimen/value_size" />
    </RelativeLayout>
    
     <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="10dp"
        android:background="#d0d0d0" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="#FFFFFF" >

        <TextView
            android:id="@+id/chidao_reason"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:layout_marginLeft="20dp"
            android:text="迟到原因"
            android:textColor="#333333"
            android:textSize="@dimen/title_size" />

        <EditText
            android:id="@+id/chidao_reason_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="15dp"
            android:layout_toRightOf="@id/chidao_reason"
            android:background="@null"
            android:hint="请填写学生迟到原因"
            android:inputType="text"
            android:maxLength="20"
            android:textColor="#9f9f9f"
            android:textSize="@dimen/value_size" />
    </RelativeLayout>
    
    <Button
        android:id="@+id/export_chidao"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_margin="10dp"
        android:background="@drawable/export_btn_selector"
        android:padding="0dp"
        android:text="@string/export_chidao"
        android:textColor="#FFFFFF"
        android:textSize="16sp" />

    <Button
        android:id="@+id/import_chidao"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_margin="10dp"
        android:background="@drawable/import_btn_selector"
        android:padding="0dp"
        android:text="@string/import_chidao"
        android:textColor="#FFFFFF"
        android:textSize="16sp" />

    <ListView
        android:id="@+id/chidao_listview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp" />

</LinearLayout>